--- a/src/RhythmCore/RhythmCore.2020/RhythmCore.2020.csproj
+++ b/src/RhythmCore/RhythmCore.2020/RhythmCore.2020.csproj
@@ -33,38 +33,38 @@
     <DocumentationFile>bin\Release\RhythmCore.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DesignScriptBuiltin, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DesignScriptBuiltin.dll</HintPath>
+    <Reference Include="DesignScriptBuiltin, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DesignScriptBuiltin.dll</HintPath>
     </Reference>
-    <Reference Include="DSIronPython, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DSIronPython.dll</HintPath>
+    <Reference Include="DSCPython, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DSCPython.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoApplications, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DynamoApplications.dll</HintPath>
+    <Reference Include="DynamoApplications, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DynamoApplications.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoCore, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DynamoCore.dll</HintPath>
+    <Reference Include="DynamoCore, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DynamoCore.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoInstallDetective, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DynamoInstallDetective.dll</HintPath>
+    <Reference Include="DynamoInstallDetective, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DynamoInstallDetective.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoServices, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.DynamoServices.2.3.2.15696\lib\net47\DynamoServices.dll</HintPath>
+    <Reference Include="DynamoServices, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.DynamoServices.2.16.0.2501\lib\netstandard2.0\DynamoServices.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoShapeManager, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DynamoShapeManager.dll</HintPath>
+    <Reference Include="DynamoShapeManager, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DynamoShapeManager.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoUnits, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.3.2.15696\lib\net47\DynamoUnits.dll</HintPath>
+    <Reference Include="DynamoUnits, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.16.0.2501\lib\net48\DynamoUnits.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoUtilities, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\DynamoUtilities.dll</HintPath>
+    <Reference Include="DynamoUtilities, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\DynamoUtilities.dll</HintPath>
     </Reference>
     <Reference Include="Humanizer, Version=2.14.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\Humanizer.Core.2.14.1\lib\netstandard2.0\Humanizer.dll</HintPath>
+      <HintPath>..\..\packages\Humanizer.Core.2.14.1\lib\netstandard2.0\Humanizer.dll</HintPath>
     </Reference>
     <Reference Include="Markov, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\Markov.2.0.0\lib\net35\Markov.dll</HintPath>
+      <HintPath>..\..\packages\Markov.2.0.0\lib\net35\Markov.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\Rhythm\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
@@ -78,17 +78,17 @@
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\Rhythm\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\..\Rhythm\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="ProtoCore, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\ProtoCore.dll</HintPath>
+    <Reference Include="ProtoCore, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\ProtoCore.dll</HintPath>
     </Reference>
-    <Reference Include="ProtoGeometry, Version=2.3.0.5132, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.3.2.15696\lib\net47\ProtoGeometry.dll</HintPath>
+    <Reference Include="ProtoGeometry, Version=2.16.0.2365, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.16.0.2501\lib\net48\ProtoGeometry.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -121,8 +121,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="VMDataBridge, Version=2.3.2.15696, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Rhythm\packages\DynamoVisualProgramming.Core.2.3.2.15696\lib\net47\VMDataBridge.dll</HintPath>
+    <Reference Include="VMDataBridge, Version=2.16.0.2501, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DynamoVisualProgramming.Core.2.16.0.2501\lib\net48\VMDataBridge.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +134,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\logo.png" />
   </ItemGroup>
   <Import Project="..\RhythmCore.SharedProject\RhythmCore.SharedProject.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
