--- a/src/RhythmUI/RhythmUI.2023/RhythmUI.2023.csproj
+++ b/src/RhythmUI/RhythmUI.2023/RhythmUI.2023.csproj
@@ -198,4 +198,8 @@
   </ItemGroup>
   <Import Project="..\RhythmUI.SharedProject\RhythmUI.SharedProject.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Debug xcopy "$(ProjectDir)bin\Debug\RhythmUI.dll" "$(AppData)\Dynamo\Dynamo Revit\2.16\packages\Rhythm\bin" /Y /I
+if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmUI.dll" "$(AppData)\Dynamo\Dynamo Revit\2.16\packages\Rhythm\bin" /Y /I</PostBuildEvent>
+  </PropertyGroup>
 </Project>
