--- a/src/RhythmViewExtension/RhythmViewExtension.2024/packages.config
+++ b/src/RhythmViewExtension/RhythmViewExtension.2024/packages.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net48" />
-  <package id="DynamoVisualProgramming.Core" version="2.17.0.3472" targetFramework="net48" />
-  <package id="DynamoVisualProgramming.DynamoCoreNodes" version="2.17.0.3472" targetFramework="net48" />
-  <package id="DynamoVisualProgramming.DynamoServices" version="2.17.1.4055" targetFramework="net48" />
-  <package id="DynamoVisualProgramming.Revit" version="2.16.1.6510" targetFramework="net48" />
-  <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.17.0.3472" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.Core" version="2.16.0.2501" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.DynamoServices" version="2.16.0.2501" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.WpfUILibrary" version="2.16.0.2501" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.16.0.2501" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="NUnit" version="2.6.3" targetFramework="net48" />
   <package id="Prism" version="4.1.0.0" targetFramework="net48" />
