--- a/src/RhythmViewExtension/RhythmViewExtension.csproj
+++ b/src/RhythmViewExtension/RhythmViewExtension.csproj
@@ -140,6 +140,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmViewExtension.dll" "$(ProjectDir)..\_release" /Y /I</PostBuildEvent>
+    <PostBuildEvent>if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\Release\RhythmViewExtension.dll" "$(ProjectDir)..\_release\Rhythm\bin" /Y /I</PostBuildEvent>
   </PropertyGroup>
 </Project>
