--- a/src/RhythmExtension/RhythmExtension.2024/packages.config
+++ b/src/RhythmExtension/RhythmExtension.2024/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net48" />
   <package id="DynamoVisualProgramming.Core" version="2.18.1.5096" targetFramework="net48" />
   <package id="DynamoVisualProgramming.DynamoServices" version="2.18.1.5096" targetFramework="net48" />
+  <package id="DynamoVisualProgramming.WpfUILibrary" version="2.18.1.5096" targetFramework="net48" />
   <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.18.1.5096" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="NUnit" version="2.6.3" targetFramework="net48" />
