--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -88,7 +88,7 @@
   <Target Name="CopyFiles" AfterTargets="CoreBuild" Condition="$(Configuration.Contains('Release'))">
     <ItemGroup>
       <AssemblyFiles Include="$(TargetDir)RhythmCore.dll" />
-      <AssemblyFiles Include="$(TargetDir)RhythmCore.xml" />
+      <AssemblyFiles Include="$(TargetDir)*.xml" />
     </ItemGroup>
     <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\_release\Rhythm\bin" />
   </Target>
