--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -88,6 +88,7 @@
   <Target Name="CopyFiles" AfterTargets="CoreBuild" Condition="$(Configuration.Contains('Release'))">
     <ItemGroup>
       <AssemblyFiles Include="$(TargetDir)RhythmCore.dll" />
+      <AssemblyFiles Include="$(ProjectDir)..\_release\Rhythm\extra\*.xml" />
       <AssemblyFiles Include="$(TargetDir)*.xml" />
     </ItemGroup>
     <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\_release\Rhythm\bin" />
