Feat: Add configuration all Revit Version. (#58)
* add configuration

* add build output

* add debug profile

* fix copy RhythmUI

* fix build copy package

* add config xml missing

* add solution item

* add lib 2021

* fix new api R24

* replace with RevitNodes and RevitServices nutget

--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -88,7 +88,8 @@
   <Target Name="CopyFiles" AfterTargets="CoreBuild" Condition="$(Configuration.Contains('Release'))">
     <ItemGroup>
       <AssemblyFiles Include="$(TargetDir)RhythmCore.dll" />
-      <AssemblyFiles Include="$(TargetDir)RhythmCore.xml" />
+      <AssemblyFiles Include="$(ProjectDir)..\_release\Rhythm\extra\*.xml" />
+      <AssemblyFiles Include="$(TargetDir)*.xml" />
     </ItemGroup>
     <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\_release\Rhythm\bin" />
   </Target>
