--- a/src/RhythmRevit/RhythmRevit.csproj
+++ b/src/RhythmRevit/RhythmRevit.csproj
@@ -27,7 +27,7 @@
         <DefineConstants>$(DefineConstants);R20</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Debug R21'))">
-        <DynamoVersion>2.17</DynamoVersion>
+        <DynamoVersion>2.6</DynamoVersion>
         <DynamoOutput>2.6</DynamoOutput>
         <RevitVersion>2021</RevitVersion>
         <DebugSymbols>true</DebugSymbols>
@@ -83,7 +83,7 @@
         <DefineConstants>$(DefineConstants);R23</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
-        <DynamoVersion>2.16</DynamoVersion>
+        <DynamoVersion>2.17</DynamoVersion>
         <DynamoOutput>2.17</DynamoOutput>
         <RevitVersion>2024</RevitVersion>
         <DefineConstants>$(DefineConstants);R24</DefineConstants>
@@ -119,58 +119,53 @@
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="RevitNodes">
-            <HintPath>..\..\lib\$(RevitVersion)\RevitNodes.dll</HintPath>
-        </Reference>
-        <Reference Include="RevitServices">
-            <HintPath>..\..\lib\$(RevitVersion)\RevitServices.dll</HintPath>
-        </Reference>
-        <Reference Include="System.Windows"/>
+        <Reference Include="System.Windows" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Chuongmep.Revit.Api.RevitAPI" Version="$(RevitVersion).*"/>
-        <PackageReference Include="Chuongmep.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*"/>
-        <PackageReference Include="Chuongmep.Revit.Api.AdWindows" Version="$(RevitVersion).*"/>
-        <PackageReference Include="CommonServiceLocator" Version="1.0"/>
-        <PackageReference Include="DynamoVisualProgramming.Core" Version="$(DynVersion).*"/>
-        <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*"/>
-        <PackageReference Include="DynamoVisualProgramming.DynamoServices" Version="$(DynVersion).*"/>
-        <PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" Version="$(DynVersion).*"/>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-        <PackageReference Include="NUnit" Version="2.6.3"/>
-        <PackageReference Include="Prism" Version="4.1.0.0"/>
-        <PackageReference Include="System.Buffers" Version="4.5.1"/>
-        <PackageReference Include="System.Collections.Immutable" Version="1.7.1"/>
-        <PackageReference Include="System.Memory" Version="4.5.4"/>
-        <PackageReference Include="System.Numerics.Vectors" Version="4.5.0"/>
-        <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.3"/>
-        <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
-        <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
+        <PackageReference Include="Chuongmep.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
+        <PackageReference Include="Chuongmep.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
+        <PackageReference Include="Chuongmep.Revit.Api.AdWindows" Version="$(RevitVersion).*" />
+        <PackageReference Include="CommonServiceLocator" Version="1.0" />
+        <PackageReference Include="DynamoVisualProgramming.Core" Version="$(DynVersion).*" />
+        <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*" />
+        <PackageReference Include="DynamoVisualProgramming.DynamoServices" Version="$(DynVersion).*" />
+        <PackageReference Include="DynamoVisualProgramming.Revit" Version="$(DynVersion).*" />
+        <PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" Version="$(DynVersion).*" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="NUnit" Version="2.6.3" />
+        <PackageReference Include="Prism" Version="4.1.0.0" />
+        <PackageReference Include="System.Buffers" Version="4.5.1" />
+        <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
+        <PackageReference Include="System.Memory" Version="4.5.4" />
+        <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+        <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.3" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+        <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\RhythmCore\RhythmCore.csproj" />
       <ProjectReference Include="..\RhythmViewExtension\RhythmViewExtension.csproj" />
     </ItemGroup>
     <Target Name="CopyFiles" AfterTargets="CoreBuild">
-        <Message Text="Build Revit Version $(RevitVersion)" Importance="high"/>
+        <Message Text="Build Revit Version $(RevitVersion)" Importance="high" />
         <ItemGroup>
-            <AssemblyFiles Include="$(TargetDir)RhythmRevit.dll"/>
+            <AssemblyFiles Include="$(TargetDir)RhythmRevit.dll" />
             <AssemblyFiles Include="$(TargetDir)RhythmCore.dll" />
             <AssemblyFiles Include="$(TargetDir)RhythmViewExtension.dll" />
             <AssemblyFiles Include="$(TargetDir)*.xml" />
             <AssemblyFiles Include="$(ProjectDir)..\_release\Rhythm\extra\*.xml" />
-            <PgkDefinition Include="$(ProjectDir)..\_release\Rhythm\pkg.json"/>
-            <ExtralFiles Include="$(ProjectDir)..\_release\Rhythm\extra\*.*"/>
+            <PgkDefinition Include="$(ProjectDir)..\_release\Rhythm\pkg.json" />
+            <ExtralFiles Include="$(ProjectDir)..\_release\Rhythm\extra\*.*" />
             <!--            <XmlCustomization Include="$(SolutionDir)docs\*.xml"/>-->
             <!--      <DyfFiles Include="$(SolutionDir)docs\dyf\*.*" />-->
         </ItemGroup>
-        <Message Text="Copying From $(TargetDir) To $(FolderPackages)" Importance="high"/>
-        <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(FolderPackages)bin"/>
+        <Message Text="Copying From $(TargetDir) To $(FolderPackages)" Importance="high" />
+        <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(FolderPackages)bin" />
         <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\_release\$(PackageName)\bin" />
-        <Copy SourceFiles="@(XmlCustomization)" DestinationFolder="$(FolderPackages)bin"/>
-        <Copy SourceFiles="@(PgkDefinition)" DestinationFolder="$(FolderPackages)"/>
-        <Copy SourceFiles="@(ExtralFiles)" DestinationFolder="$(FolderPackages)extra"/>
+        <Copy SourceFiles="@(XmlCustomization)" DestinationFolder="$(FolderPackages)bin" />
+        <Copy SourceFiles="@(PgkDefinition)" DestinationFolder="$(FolderPackages)" />
+        <Copy SourceFiles="@(ExtralFiles)" DestinationFolder="$(FolderPackages)extra" />
 <!--        <Copy SourceFiles="@(DyfFiles)" DestinationFolder="$(FolderPackages)dyf"/>-->
-        <Message Text="Copied Completed" Importance="high"/>
+        <Message Text="Copied Completed" Importance="high" />
     </Target>
 </Project>
